# fmca-custom

./: .gitignore  CMakeLists.txt
FMCA/: CovarianceKernel
FMCA/src/CovarianceKernel/: CovarianceKernel.h  DerivateCovarianceKernel.h
cmake/: FindPybind11.cmake
py/: CMakeLists.txt  FMCA.cpp  FMCA_Cholesky.ipynb
tests/: IO.h  test_H2Matrix.cpp  test_H2SampletCompressor.cpp  test_H2SampletCompressorUnsymmetric.cpp
